dice roll updates

--- a/lang/en.json
+++ b/lang/en.json
@@ -117,8 +117,8 @@
     },
     "alignment": "Alignment",
     "size": "Size",
-    "noEnc": "# Enc.",
-    "noLair": "# in Lair",
+    "encWild": "# Enc.",
+    "encLair": "# in Lair",
     "morale": "Morale",
     "xp": "XP Value",
     "treasure": "Treasure Class",
