Added basic spell memorization (slot) tracking

--- a/lang/en.json
+++ b/lang/en.json
@@ -212,7 +212,8 @@
       "show": "Show",
       "equip": "Toggle Equip",
       "equipped": "Equipped",
-      "ammunition": "Ammo",
+      "consumable": "Consumable",
+      "ammunition": "Ammunition",
       "cost": "Cost",
       "qty": "Qty",
       "weight": "Weight",
