Added some graphics and layout changes. Favoured weapons and proficiencies.

--- a/lang/en.json
+++ b/lang/en.json
@@ -149,7 +149,10 @@
     "fightingAbility": "Fighting Ability",
     "fa": "FA",
     "unskilled": "Unskilled",
-    "wpnSkills": "Weapon Skills & Masteries",
+    "wpnSkills": "Favoured Wpns",
+    "level4": "Level 4",
+    "level8": "Level 8",
+    "level12": "Level 12",
     "castingAbility": "Casting Ability",
     "ca": "CA",
     "turningAbility": "Turning Ability",
