Style/layout updates for fonts and graphics

--- a/lang/en.json
+++ b/lang/en.json
@@ -22,7 +22,7 @@
       "exploration": "Exploration",
       "classAbilities": "Class Abilities",
       "fightingSkills": "Fighting Skills",
-      "combatStats": "Combat Statistics",
+      "combatStats": "Combat Stats",
       "savingThrows": "Saving Throws",
       "equipmentItems": "Equipment & Items",
       "abilitiesItems": "Abilities & Items",
