--- a/lang/en.json
+++ b/lang/en.json
@@ -294,13 +294,20 @@
       "caCheck": "Casting Ability check",
       "taCheck": "Turn Undead check",
       "spells": "Spells",
+      "spellsPerDay": "Spells/Day",
       "friendlyName": "Friendly Name",
       "itemId": "Item ID",
       "containerId": "Container ID",
       "containedItemIds": "Contained Item IDs",
       "bonusLvl1": "Level 1",
       "bonusLvl2": "Level 2",
-      "bonusLvl3": "Level 3"
+      "bonusLvl3": "Level 3",
+      "lvl1": "L1",
+      "lvl2": "L2",
+      "lvl3": "L3",
+      "lvl4": "L4",
+      "lvl5": "L5",
+      "lvl6": "L6"
     }
   }
 }
