Casting a spell automatically decrements # memorized

--- a/lang/en.json
+++ b/lang/en.json
@@ -284,6 +284,7 @@
     "dataLabel": {
       "basicMeleeAtk": "Basic melee attack",
       "attackWith": "Attack with",
+      "castSpell": "Cast spell",
       "hitDieRoll": "Hit Die + CN mod",
       "deathSave": "Save vs. Death/Poison/Radiation",
       "deviceSave": "Save vs. Device",
