Add attribute mod calculator

--- a/lang/en.json
+++ b/lang/en.json
@@ -303,6 +303,7 @@
       "bonusLvl1": "Level 1",
       "bonusLvl2": "Level 2",
       "bonusLvl3": "Level 3",
+      "bonusLvl4": "Level 4",
       "lvl1": "L1",
       "lvl2": "L2",
       "lvl3": "L3",
