NPC sheet fix for weapon/attaack list and remove items list

--- a/lang/en.json
+++ b/lang/en.json
@@ -42,6 +42,7 @@
       "descNotes": "Description & Notes",
       "effectsCond": "Effects & Conditions",
       "attacksItems": "Attacks & Items",
+      "attacksWeapons": "Attacks & Weapons",
       "encumbrance": "Encumbrance",
       "money": "Money",
       "treasure": "Treasure"
