--- a/lang/en.json
+++ b/lang/en.json
@@ -10,7 +10,11 @@
       "characterClasses": "Character Classes",
       "characterClassesHint": "Character classes available to PCs and some NPCs.",
       "autoCalcAc": "Auto-calculate Armor Class",
-      "autoCalcAcHint": "Use 'equipped' status of armor and shields to calculate AC. Note: This function may not work correctly with certain magic items, depending on whether or not they should stack with other protective items."
+      "autoCalcAcHint": "Use 'equipped' status of armor and shields to calculate AC. N.B.: This function may not work correctly with certain magic item combinations, depending on whether or not they should stack with other protective items. But the majority of cases should work correctly.",
+      "enableAttrChecks": "Enable basic attribute checks",
+      "enableAttrChecksHint": "This option allows players to click an attribute name to do a 3d6 or d20 roll-under check. N.B.: Aside from the optional 3d6 concentration check for spellcasters taking damage, these are not actually part of the rules as written, so consider this a 'home-brew' option.",
+      "flipRollUnderMods": "Reverse situational modifiers on roll-under checks",
+      "flipRollUnderModsHint": "For roll-under checks, reverse the sign on situational modifiers so that a positive number is treated as a bonus (subtracted from the roll) and a negative number is treated as a penalty (added to the roll). Other modifiers applied from attributes or items are automatically handled this way."
     },
     "tabs": {
       "abilities": "Abilities",
