Starting work on issue #37, easily convert containers to items & back

--- a/lang/en.json
+++ b/lang/en.json
@@ -260,6 +260,7 @@
       "equipped": "Equipped",
       "consumable": "Consumable",
       "ammunition": "Ammunition",
+      "container": "Container",
       "cost": "Cost",
       "qty": "Qty",
       "weight": "Weight",
