Remove Unarmored AC and reformat DR label

--- a/lang/en.json
+++ b/lang/en.json
@@ -311,7 +311,7 @@
       "wtClass": "Wt Class",
       "armorClass": "Armor Class",
       "ac": "AC",
-      "dr": "DR",
+      "dr": "Damage Reduction",
       "dmgResist": "Dmg Resist",
       "unarmored": "Unarmored"
     },
