Added complexion field to character sheet Description tab

--- a/lang/en.json
+++ b/lang/en.json
@@ -85,6 +85,7 @@
       "weight": "Weight",
       "hair": "Hair",
       "eyes": "Eyes",
+      "complexion": "Complexion",
       "secSkills": "Secondary Skills",
       "languages": "Languages",
       "physFeatures": "Physical Features"
