Starting work on merging multiple crit-hit and crit-miss buttons down to one

--- a/lang/en.json
+++ b/lang/en.json
@@ -328,13 +328,19 @@
         "hitAllyCrit": "Hit ally: closest for melee, closest adjacent for ranged. <b>Critical Hit</b>.",
         "hitSelf": "Hit self: Regular hit.",
         "hitSelfCrit": "Hit self: <b>Critical Hit</b>.",
-        "magician": "Critical miss roll for magician",
-        "fighter": "Critical miss roll for fighter",
+        "cleric": "Critical miss roll for cleric-type",
+        "fighter": "Critical miss roll for fighter-type",
+        "magician": "Critical miss roll for magician-type",
+        "thief": "Critical miss roll for thief-type",
+        "npc": "Critical miss roll for npc/monster",
         "other": "Critical miss roll for cleric/thief/monster"
       },
       "critHit": {
-        "magician": "Critical hit roll for magician",
-        "fighter": "Critical hit roll for fighter",
+        "cleric": "Critical hit roll for cleric-type",
+        "fighter": "Critical hit roll for fighter-type",
+        "magician": "Critical hit roll for magician-type",
+        "thief": "Critical hit roll for thief-type",
+        "npc": "Critical hit roll for npc/monster",
         "other": "Critical hit roll for cleric/thief/monster"
       }
     },
