Added Reroll Initiative setting, improvements to Reset Initiative function

--- a/lang/en.json
+++ b/lang/en.json
@@ -17,6 +17,11 @@
             "flipRollUnderModsHint": "For roll-under checks, reverse the sign on situational modifiers so that a positive number is treated as a bonus (subtracted from the roll) and a negative number is treated as a penalty (added to the roll). Other modifiers applied from attributes or items are automatically handled this way.",
             "isGroupInitiative": "Use group-based initiative",
             "isGroupInitiativeHint": "Hyperborea 3rd Edition (as written) uses group-based initiative. Disabling this item reverts the system to Foundry's default behavior of individual initiative.",
+            "rerollInitiative": "Initiative persistence",
+            "rerollInitiativeHint": "Keeps, resets or rerolls initiative each round.",
+            "initiativeKeep": "Keep same for each round",
+            "initiativeReset": "Reset to blank each round",
+            "initiativeReroll": "Reroll each round",
             "critHits": "Critical Hits",
             "critHitsHint": "Show buttons to roll critical hits on natural 20.",
             "critMiss": "Critical Misses / Xathoqqua’s Woe",
